Make the map position:fixed, move it behind the content container.

--- a/app/assets/stylesheets/src/graves/map.less
+++ b/app/assets/stylesheets/src/graves/map.less
@@ -2,8 +2,12 @@
 
 #map {
 
-  height: 100vh;
+  z-index: -1;
+  position: fixed !important;
   width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
 
   .leaflet-popup {
     pointer-events: none;
